cleaning footer (not done)

--- a/libs/client/static/css/_buttons.sass
+++ b/libs/client/static/css/_buttons.sass
@@ -1,7 +1,9 @@
 //! Buttons.
 
 @mixin button_conf($float)
-    max-width: 25px
+    // min-width: 25px
+    // max-width: 35px
+    height: 100%
     float: $float
     &:hover
         cursor: pointer
