--- a/libs/client/static/css/_layout.sass
+++ b/libs/client/static/css/_layout.sass
@@ -11,6 +11,11 @@
 /// Left/right margins for the header and the footer.
 $layout_left_right_margin: 10%
 
+/// Width for split display.
+$layout_split_left_width: $layout_left_right_margin
+$layout_split_right_width: $layout_left_right_margin
+$layout_split_center_width: 100% - 0.1% - $layout_split_left_width - $layout_split_right_width
+
 /// # Header/footer stuff
 
 /// Shadow h-offset.
