--- a/libs/client/static/css/body.sass
+++ b/libs/client/static/css/body.sass
@@ -33,11 +33,12 @@ body
         .memthol_chart_container
             @include buttons
 
-            .select_axis:
-                font: 100% $font_stack
-
             .chart_header
                 margin: 0 $layout_left_right_margin
+                height: 2vh
+
+                select
+                    font: 100% $font_stack
 
             .chart_style
                 @include chart_style
