new icons, better layout, fixed filter-handling problems, improved ergonomics

--- a/libs/client/static/css/_mixins.sass
+++ b/libs/client/static/css/_mixins.sass
@@ -18,6 +18,8 @@
         @include button_move_up(left)
     .move_down_button
         @include button_move_down(left)
+    .save_button
+        @include button_save(left)
     .refresh_button
         @include button_refresh(right)
     .close_button
@@ -38,8 +40,8 @@
         @include button_move_up($left_or_right)
     .move_down_button
         @include button_move_down($left_or_right)
-    .refresh_button
-        @include button_refresh($left_or_right)
+    .save_button
+        @include button_save($left_or_right)
     .close_button
         @include button_close($left_or_right)
     .add_button
