--- a/libs/client/static/css/footer.css
+++ b/libs/client/static/css/footer.css
@@ -56,6 +56,14 @@ footer .move_down_button {
 footer .move_down_button:hover {
   cursor: pointer;
 }
+footer .save_button {
+  height: 100%;
+  float: left;
+  content: url("../pics/save.png");
+}
+footer .save_button:hover {
+  cursor: pointer;
+}
 footer .refresh_button {
   height: 100%;
   float: right;
@@ -142,12 +150,12 @@ footer .footer_tabs .footer_tabs_left .move_down_button {
 footer .footer_tabs .footer_tabs_left .move_down_button:hover {
   cursor: pointer;
 }
-footer .footer_tabs .footer_tabs_left .refresh_button {
+footer .footer_tabs .footer_tabs_left .save_button {
   height: 100%;
   float: right;
-  content: url("../pics/refresh.png");
+  content: url("../pics/save.png");
 }
-footer .footer_tabs .footer_tabs_left .refresh_button:hover {
+footer .footer_tabs .footer_tabs_left .save_button:hover {
   cursor: pointer;
 }
 footer .footer_tabs .footer_tabs_left .close_button {
@@ -224,12 +232,12 @@ footer .footer_tabs .footer_tabs_right .move_down_button {
 footer .footer_tabs .footer_tabs_right .move_down_button:hover {
   cursor: pointer;
 }
-footer .footer_tabs .footer_tabs_right .refresh_button {
+footer .footer_tabs .footer_tabs_right .save_button {
   height: 100%;
   float: left;
-  content: url("../pics/refresh.png");
+  content: url("../pics/save.png");
 }
-footer .footer_tabs .footer_tabs_right .refresh_button:hover {
+footer .footer_tabs .footer_tabs_right .save_button:hover {
   cursor: pointer;
 }
 footer .footer_tabs .footer_tabs_right .close_button {
@@ -311,6 +319,14 @@ footer .footer_tabs .footer_tabs_center .move_down_button {
   content: url("../pics/arrow_down.png");
 }
 footer .footer_tabs .footer_tabs_center .move_down_button:hover {
+  cursor: pointer;
+}
+footer .footer_tabs .footer_tabs_center .save_button {
+  height: 100%;
+  float: left;
+  content: url("../pics/save.png");
+}
+footer .footer_tabs .footer_tabs_center .save_button:hover {
   cursor: pointer;
 }
 footer .footer_tabs .footer_tabs_center .refresh_button {
@@ -587,6 +603,14 @@ footer .footer_display .filter_ul .filter_buttons .move_down_button {
   content: url("../pics/arrow_down.png");
 }
 footer .footer_display .filter_ul .filter_buttons .move_down_button:hover {
+  cursor: pointer;
+}
+footer .footer_display .filter_ul .filter_buttons .save_button {
+  height: 100%;
+  float: left;
+  content: url("../pics/save.png");
+}
+footer .footer_display .filter_ul .filter_buttons .save_button:hover {
   cursor: pointer;
 }
 footer .footer_display .filter_ul .filter_buttons .refresh_button {
