--- a/libs/client/static/css/_buttons.sass
+++ b/libs/client/static/css/_buttons.sass
@@ -28,6 +28,10 @@
     @include button_conf($float)
     content: url("../pics/refresh.png")
 
+@mixin button_save($float)
+    @include button_conf($float)
+    content: url("../pics/save.png")
+
 @mixin button_move_up($float)
     @include button_conf($float)
     content: url("../pics/arrow_up.png")
