huge simplifications in workflow and UI

--- a/libs/client/static/css/_mixins.sass
+++ b/libs/client/static/css/_mixins.sass
@@ -42,6 +42,8 @@
         @include button_move_down($left_or_right)
     .save_button
         @include button_save($left_or_right)
+    .refresh_button
+        @include button_refresh($left_or_right)
     .close_button
         @include button_close($left_or_right)
     .add_button
