added undo button that reverts filters to whatever's on the server

--- a/libs/client/static/css/_buttons.sass
+++ b/libs/client/static/css/_buttons.sass
@@ -28,6 +28,10 @@
     @include button_conf($float)
     content: url("../pics/refresh.png")
 
+@mixin button_undo($float)
+    @include button_conf($float)
+    content: url("../pics/undo.png")
+
 @mixin button_save($float)
     @include button_conf($float)
     content: url("../pics/save.png")
