--- a/libs/client/static/css/_mixins.sass
+++ b/libs/client/static/css/_mixins.sass
@@ -22,6 +22,8 @@
         @include button_save(left)
     .refresh_button
         @include button_refresh(right)
+    .undo_button
+        @include button_undo(right)
     .close_button
         @include button_close(right)
     .add_button
@@ -44,6 +46,8 @@
         @include button_save($left_or_right)
     .refresh_button
         @include button_refresh($left_or_right)
+    .undo_button
+        @include button_undo($left_or_right)
     .close_button
         @include button_close($left_or_right)
     .add_button
