--- a/libs/client/static/css/footer.css
+++ b/libs/client/static/css/footer.css
@@ -72,6 +72,14 @@ footer .refresh_button {
 footer .refresh_button:hover {
   cursor: pointer;
 }
+footer .undo_button {
+  height: 100%;
+  float: right;
+  content: url("../pics/undo.png");
+}
+footer .undo_button:hover {
+  cursor: pointer;
+}
 footer .close_button {
   height: 100%;
   float: right;
@@ -166,6 +174,14 @@ footer .footer_tabs .footer_tabs_left .refresh_button {
 footer .footer_tabs .footer_tabs_left .refresh_button:hover {
   cursor: pointer;
 }
+footer .footer_tabs .footer_tabs_left .undo_button {
+  height: 100%;
+  float: right;
+  content: url("../pics/undo.png");
+}
+footer .footer_tabs .footer_tabs_left .undo_button:hover {
+  cursor: pointer;
+}
 footer .footer_tabs .footer_tabs_left .close_button {
   height: 100%;
   float: right;
@@ -254,6 +270,14 @@ footer .footer_tabs .footer_tabs_right .refresh_button {
   content: url("../pics/refresh.png");
 }
 footer .footer_tabs .footer_tabs_right .refresh_button:hover {
+  cursor: pointer;
+}
+footer .footer_tabs .footer_tabs_right .undo_button {
+  height: 100%;
+  float: left;
+  content: url("../pics/undo.png");
+}
+footer .footer_tabs .footer_tabs_right .undo_button:hover {
   cursor: pointer;
 }
 footer .footer_tabs .footer_tabs_right .close_button {
@@ -351,6 +375,14 @@ footer .footer_tabs .footer_tabs_center .refresh_button {
   content: url("../pics/refresh.png");
 }
 footer .footer_tabs .footer_tabs_center .refresh_button:hover {
+  cursor: pointer;
+}
+footer .footer_tabs .footer_tabs_center .undo_button {
+  height: 100%;
+  float: right;
+  content: url("../pics/undo.png");
+}
+footer .footer_tabs .footer_tabs_center .undo_button:hover {
   cursor: pointer;
 }
 footer .footer_tabs .footer_tabs_center .close_button {
@@ -637,6 +669,14 @@ footer .footer_display .filter_ul .filter_buttons_left .refresh_button {
 footer .footer_display .filter_ul .filter_buttons_left .refresh_button:hover {
   cursor: pointer;
 }
+footer .footer_display .filter_ul .filter_buttons_left .undo_button {
+  height: 100%;
+  float: right;
+  content: url("../pics/undo.png");
+}
+footer .footer_display .filter_ul .filter_buttons_left .undo_button:hover {
+  cursor: pointer;
+}
 footer .footer_display .filter_ul .filter_buttons_left .close_button {
   height: 100%;
   float: right;
@@ -726,6 +766,14 @@ footer .footer_display .filter_ul .filter_buttons_right .refresh_button {
   content: url("../pics/refresh.png");
 }
 footer .footer_display .filter_ul .filter_buttons_right .refresh_button:hover {
+  cursor: pointer;
+}
+footer .footer_display .filter_ul .filter_buttons_right .undo_button {
+  height: 100%;
+  float: left;
+  content: url("../pics/undo.png");
+}
+footer .footer_display .filter_ul .filter_buttons_right .undo_button:hover {
   cursor: pointer;
 }
 footer .footer_display .filter_ul .filter_buttons_right .close_button {
