--- a/libs/client/static/css/footer.sass
+++ b/libs/client/static/css/footer.sass
@@ -41,6 +41,7 @@ footer
 
     .footer_display
         height: $layout_footer_display_height
+        overflow: scroll
 
         .separator
             width: 100%
